--- a/KafkaBasics/pom.xml
+++ b/KafkaBasics/pom.xml
@@ -2,11 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>kafka</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>org.example</groupId>
-    <artifactId>kafka</artifactId>
-    <version>1.0</version>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
@@ -20,14 +21,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
-<!--            <scope>test</scope>-->
-        </dependency>
-
-<!--        twitter dependency-->
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
-            <version>2.2.0</version> <!-- or whatever the latest version is -->
+            <!--            <scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -40,7 +34,7 @@
             <version>1.3.70</version>
         </dependency>
 
-<!--json object-->
+        <!--json object-->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -49,9 +43,11 @@
 
     </dependencies>
 
+    <artifactId>KafkaBasics</artifactId>
+
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
     </properties>
 
 </project>
