update http client

--- a/KafkaTwitterConsumer/pom.xml
+++ b/KafkaTwitterConsumer/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
             <version>2.2.0</version> <!-- or whatever the latest version is -->
         </dependency>
+
+        <!--        http client-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
     </dependencies>
 
 
