--- a/KafkaTwitterConsumer/pom.xml
+++ b/KafkaTwitterConsumer/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.6</version>
         </dependency>
+
+        <!--       log4j -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.8.2</version>
+        </dependency>
     </dependencies>
 
 
